# ALSE_2320

./: .gitignore  datos.txt
230912_complejos/: CMakeLists.txt  main.cpp  main_1000093375_10000091360.cpp
230915_struct/: CMakeLists.txt  datos.txt  main.cpp  main_1000093375_10000091360.cpp
230929_ordenar/: CMakeLists.txt  datos.txt  main_1000093375_10000091360.cpp
231003_complejos/: CMakeLists.txt  main_1000093375_10000091360.cpp
231003_vector/: CMakeLists.txt  Punto.cpp  Punto.h  datos.txt  main.cpp  main_1000093375_10000091360.cpp
231005_Punto/: CMakeLists.txt  Punto.cpp  Punto.h  datos.txt  main.cpp  main_1000093375.cpp  punto.cpp  punto.h
231019_figuras/: CMakeLists.txt  Circulo.h  Cuadrado.cpp  Cuadrado.h  Pentagono.cpp  Pentagono.h  Triangulo.cpp  main.cpp
231109_sqlite/: CMakeLists.txt  main.cpp
9-11-2023/: CMakeLists.txt  main.cpp
JAbellaBallen/: datos.txt
JuanRodriguez/: datos.txt
Luis/: datos.txt
Parcial/: CMakeLists.txt  datos.txt  main.cpp
Parcial 2/: CMakeLists.txt  alumno.cpp  alumno.h  main.cpp
Parcial2/: Alumno.cpp  Alumno.h  CMakeLists.txt  datos.txt  main.cpp
Parcial_1/: CMakeCache.txt  CMakeLists.txt  Makefile  archivo.txt  cmake_install.cmake  datos.txt  distancia  main.cpp
Parcial_2/: CMakeLists.txt  Datos.txt  alumno.cpp  alumno.h  datos.txt  main.cpp
ProyectoFinal/: CMakeLists.txt  Hum.cpp  Hum.h  Lluvia.cpp  Lluvia.h  Luz.cpp  Luz.h  Sensor.cpp  Sensor.h  Temp.cpp  Temp.h  Vel.cpp  Vel.h  Viento.cpp  Viento.h  main.cpp  sensores.db  sensores.mdj
ProyectoFinal/231019_figuras/: Circulo.cpp  Geometrica.cpp  Geometrica.h  Triangulo.h
ProyectoFinal/GUIProyecto/: CMakeLists.txt  CMakeLists.txt.user.11314a9  CMakeLists.txt.user.f6284c0  ledbuttom.cpp  ledbuttom.h  ledindicator.cpp  ledindicator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ProyectoFinal/Model1/: Hum.h  Lluvia.cpp  Lluvia.h  Luz.cpp  Luz.h  Sensor.cpp  Sensor.h  Temp.cpp  Temp.h  Vel.cpp  Viento.cpp
Prueba/: CMakeLists.txt  lec.cpp
SantiagoCortesTovar/: datos.txt
complejos/: CMakeLists.txt  main_1000090999_1000092090.cpp
complejos_class/: CMakeLists.txt  archivo.txt  ex1  main.cpp
complejos_library/: CMakeLists.txt  datos.txt  main_1000091403_1000091309.cpp
pong/: CMakeLists.txt  main.cpp  pong_window.cpp  pong_window.h  pong_window.ui
proyecto_final/: CMakeLists.txt  Sensores.mdj  db_sensores.cpp  db_sensores.h  dr_viento.cpp  dr_viento.h  humedad.cpp  humedad.h  int_luz.cpp  int_luz.h  main.cpp  precipitacion.cpp  precipitacion.h  sensor.cpp  sensor.h  temperatura.cpp  temperatura.h  velocidad.cpp  velocidad.h
proyecto_final/jirafa/: CMakeLists.txt  base_aguacate.db  db_sensores_ui.db:Zone.Identifier  mainwindow.cpp  mainwindow.ui
(+61 files in other folders)
